--- a/concept.html
+++ b/concept.html
@@ -3,7 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chef RPG - Concept</title>
+    <title>Chef RPG - Key Concept</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<body>
+    <header>
+        <h1 id="site-title">Chef RPG</h1>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gamplay.html">Gamplay</a></li>
+                <li><a href="development.html">Development</a></li> 
+                <li><a href="concept.html">Concept</a></li>
+                <li><a href="references.html">References</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+        <aside class="sidebar">
+            <h3>Concepts Quicklist</h3>
+            <ul>
+                <li>Resource Managment</li>
+                <li>Crafting Systems</li>
+            </ul>
+        </aside>
+
+        <article class="content">
+            <h2>Key Concepts</h2>
+            <dl>
+                <dt>Life Simulation</dt>
+                <dd>Life simulator is when a game simulate daily activities like farming, cooking, and socializing for example!</dd>
+               
+                <dt>Crafting Systems</dt>
+                <dd>Crafting Systems combine ingredients or material to create items, dishes, or tools.</dd>
+
+                <dt>Resource Management</dt>
+                <dd>Balancing inventory, time, energy, and money to achieve goals.</dd>
+
+                <dt>Procedural Interaction</dt>
+                <dd>Events and item results based on player choices and combinations.</dd>
+
+                <dt>Player Loop</dt>
+                <dd>The repeating cyle of actions players take to progress (Gather -> craft -> serve -> upgrade).</dd>
+
+                <dt>Indie Development</dt>
+                <dd>Small team or solo practices emphasizing creativity, rapid iteration, anf community feedback.</dd>
+            </dl>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Monique Morris</p>
+</body>
 </html>
