--- a/Index.HTML
+++ b/Index.HTML
@@ -8,10 +8,9 @@
     </head>
 <body>
     <header>
-        <h1>
-            id ="site-title">Chef RPG
+        <h1 id ="site-title">Chef RPG
         </h1>
-        <p>
+        <p
             class="tangline"> A cozy life sim & cooking adventure - fansite
         </p>
         <nav>
