--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef RPG - Home</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
     <header>
@@ -69,4 +69,5 @@
         <p>&copy; 2024 <span id="highlight">Monique Morris </span> IT 3203 Web Development</p>
     </footer>
 </body>
+
 </html>
