--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef RPG - Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <header>
-        <h1>
+        <h1
             id ="site-title">Chef RPG
         </h1>
-        <p>
+        <p
             class="tangline"> A cozy life sim & cooking adventure - fansite
         </p>
         <nav>
@@ -71,3 +71,4 @@
 </body>
 
 </html>
+
