--- a/development.html
+++ b/development.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef RPG - Development</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -18,6 +18,7 @@
                 <li><a href="concept.html">Concept</a></li>
                 <li><a href="references.html">References</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
             </ul>
         </nav>
     </header>
