--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef RPG - Home</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     </head>
 <body>
     <header>
@@ -20,6 +20,7 @@
                 <li> <a herf="concept.html">concept</a></li>
                 <li> <a herf="references.html">references</a></li>
                 <li> <a herf="about.html">about</a></li>
+                <li> <a herf="quiz.html">quiz</a></li>
             </ul>
         </nav>
     </header>
