--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef RPG - Quiz</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script defer src="quiz.js"></script>
 </head>
 <body>
@@ -60,8 +60,8 @@
                 <label><input type="checkbox" name="q5" value="d"> Social Relationships</label>
             </div>
             
-            <button type="button" id="submitBtn">Submit</button>
-            <button type="button" id="resetBtn">Reset</button>
+            <button type="submit" id="submitBtn">Submit Quiz</button>
+            <button type="reset" id="resetBtn">Reset</button>
          </form>
 
             <div id="results"></div>
