--- a/development.html
+++ b/development.html
@@ -13,6 +13,8 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="page 1.html">Game Overveiw</a></li>
+                <li><a href="page 2.html">Game Review</a></li>
                 <li><a href="gamplay.html">Gamplay</a></li>
                 <li><a href="development.html">Development</a></li>
                 <li><a href="concept.html">Concept</a></li>
