--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         </p>
         <nav>
             <ul class="menu">
-                <li><a heref="index.html">Home</a></li>
-                <li> <a herf="gamplay.html">Gamplay</a></li>
-                <li> <a herf="development.html">development</a></li>
-                <li> <a herf="concept.html">concept</a></li>
-                <li> <a herf="references.html">references</a></li>
-                <li> <a herf="about.html">about</a></li>
-                <li> <a herf="quiz.html">quiz</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page 1.html">Game Overveiw</a></li>
+                <li><a href="page 2.html">Game Review</a></li>
+                <li> <a href="gamplay.html">Gamplay</a></li>
+                <li> <a href="development.html">development</a></li>
+                <li> <a href="concept.html">concept</a></li>
+                <li> <a href="references.html">references</a></li>
+                <li> <a href="about.html">about</a></li>
+                <li> <a href="quiz.html">quiz</a></li>
             </ul>
         </nav>
     </header>
