--- a/quiz.html
+++ b/quiz.html
@@ -10,9 +10,12 @@
 <body>
     <header>
         <h1 id="site-title">Chef RPG Knowledge Quiz</h1>
+        <button class="menu-toggle" id="menuBtn"></button>
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="page 1.html">Game Overveiw</a></li>
+                <li><a href="page 2.html">Game Review</a></li>
                 <li><a href="gamplay.html">Gamplay</a></li>
                 <li><a href="development.html">Development</a></li>
                 <li><a href="concept.html">Concept</a></li>
